syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
  rpc ReduceDiscount(ReduceDiscountRequest) returns (google.protobuf.Empty);
//  rpc ReduceDiscount(ReduceDiscountRequest) returns (ReduceDiscountRequest)
}

message GetDiscountRequest {
  string id = 1;
}

message CouponModel {
  string id = 1;
  string productId = 2;
  string description = 3;
  int32 amount = 4;
  int32 quantity = 5;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}
message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string id = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}

message ReduceDiscountRequest {
	string id = 1;
}

message ReduceDiscountResponse {
  bool success = 1;
}